kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ai-verify
spec: {}
status: {}
