kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-verify
  namespace: ai-verify
status:
  loadBalancer: {}
